fix masonry spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -52,11 +52,14 @@ html, body {
 
 .grid {
   width: 100%;
+  padding: 0 20px;
+  box-sizing: border-box;
   .link {
-    width: 20%;
-    background-color: red;
+    width: calc((100% - 40px)/4);
     .content {
-      padding: 20px;
+      margin: 20px;
+      padding: 10px;
+      background-color: red;
     }
   }
 }
